Bunch of improvements
Remove incomplete assert impl
Add a test framework with uvu
Use libsoup 3
Add tests for base64

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,1 +1,25 @@
-root: false
+env:
+  es2022: true
+extends: 'eslint:recommended'
+globals:
+  ARGV: readonly
+  Debugger: readonly
+  GIRepositoryGType: readonly
+  globalThis: readonly
+  imports: readonly
+  Intl: readonly
+  log: readonly
+  logError: readonly
+  print: readonly
+  printerr: readonly
+  window: readonly
+  TextEncoder: readonly
+  TextDecoder: readonly
+  console: readonly
+  setTimeout: readonly
+  setInterval: readonly
+  clearTimeout: readonly
+  clearInterval: readonly
+parserOptions:
+  ecmaVersion: 2022
+  sourceType: module
