--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
     "eslint": "^8.8.0",
-    "prettier": "^2.5.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "2.7.1",
     "rollup": "^2.67.0",
     "uvu": "^0.5.3"
   }
