--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "troll",
+  "version": "alpha",
+  "private": true,
+  "homepage": "https://github.com/sonnyp/troll/",
+  "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
     "eslint": "^8.8.0",
