--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,13 @@
   "env": {
     "es2022": true
   },
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "requireConfigFile": false,
+    "babelOptions": {
+      "plugins": ["@babel/plugin-syntax-import-assertions"]
+    }
   },
   "globals": {
     "ARGV": "readonly",
