--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://github.com/sonnyp/troll/",
   "license": "ISC",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/plugin-syntax-import-assertions": "^7.18.6",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.5.0",
