--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,17 +1,3 @@
 {
-  "trailingComma": "all",
-  "overrides": [
-    {
-      "files": "re.sonny.Commit",
-      "options": {
-        "parser": "babel"
-      }
-    },
-    {
-      "files": ["*.xml.in", "*.doap"],
-      "options": {
-        "parser": "xml"
-      }
-    }
-  ]
+  "trailingComma": "all"
 }
