--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "homepage": "https://github.com/sonnyp/troll/",
   "license": "ISC",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.9",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-syntax-import-assertions": "^7.18.6",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "eslint": "^8.24.0",
+    "eslint-plugin-import": "^2.26.0",
     "prettier": "2.7.1",
-    "rollup": "^2.78.1",
+    "rollup": "^2.79.1",
     "uvu": "^0.5.6"
   }
 }
