--- a/gjspack/Makefile
+++ b/gjspack/Makefile
@@ -9,7 +9,7 @@ test:
 
 ci: clean test
 	./bin/gjspack --appid=gjspack-demo ./demo/main.js ./demo/build
-	cd demo && flatpak-builder --user --force-clean flatpak flatpak.json
+	cd demo && flatpak-builder --install-deps-from=flathub --disable-updates --user --force-clean flatpak flatpak.json
 
 clean:
 	rm -rf demo/.flatpak-builder demo/flatpak demo/build test/build
