--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "private": true,
   "homepage": "https://github.com/sonnyp/troll/",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.25.7",
-    "@babel/eslint-parser": "^7.25.7",
-    "@babel/plugin-syntax-import-attributes": "^7.25.7",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "3.0.3",
-    "rollup": "^2.79.1",
+    "@eslint/js": "^9.39.1",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "3.7.4",
+    "rollup": "^4.53.3",
     "uvu": "^0.5.6"
   }
 }
