--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "event-target-polyfill": "^0.0.4",
     "prettier": "3.7.4",
     "rollup": "^4.53.3",
-    "uvu": "^0.5.6"
+    "uvu": "^0.5.6",
+    "yet-another-abortcontroller-polyfill": "^0.0.4"
   }
 }
